2005-01-10  Lluis Sanchez Gual <lluis@novell.com>

	* System.dll.sources: Added new file:
		System.ComponentModel/BindingDirection.cs

2004-12-26  Zoltan Varga  <vargaz@freemail.hu>

	* System.IO.Ports/ChangeLog: New file.

2004-12-21  Chris Toshok  <toshok@ximian.com>

	* System.dll.sources: add System.IO.Ports/*.

	* System.IO.Ports/SerialPort.cs,
	System.IO.Ports/SerialReceivedEventArgs.cs,
	System.IO.Ports/SerialPinChangedEventArgs.cs,
	System.IO.Ports/SerialErrorEventArgs.cs: initial import of the
	System.IO.Ports stuff.

2004-12-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* System_test.dll.sources: added CookieContainerTest.cs.

2004-11-19  Raja R Harinath  <rharinath@novell.com>

	* Makefile (USE_BOOT_COMPILE): Re-organize to use BOOT_COMPILE
	during the first pass.
	(BOOTSTRAP_MCS): Use mscorlib.dll from the net_2_0 profile.

2004-11-18  Lluis Sanchez Gual <lluis@novell.com>

	* System.dll.sources: Added new files:
		System.Configuration/ProviderSettings.cs
		System.Configuration/ProviderSettingsCollection.cs
		System.Configuration.Provider/ProviderBase.cs

2004-11-15  Lluis Sanchez Gual <lluis@novell.com>

	* System.dll.sources: Added new files:
		System.Configuration/TimeSpanConfigurationProperty.cs
		System.Configuration/TimeSpanPropertyFlags.cs
		System.Configuration/TimeSpanSerializedFormat.cs
	
2004-11-09  Lluis Sanchez Gual <lluis@novell.com>

	* System.dll.sources: Added new files:
		System.Configuration/NonEmptyStringConfigurationProperty.cs
		System.Configuration/NonEmptyStringFlags.cs

2004-11-04  Lluis Sanchez Gual <lluis@novell.com>

	* System.dll.sources: Added new files:
		System.Configuration/ConfigInfo.cs
		System.Configuration/IntegerConfigurationProperty.cs
		System.Configuration/RuntimeOnlySection.cs
		System.Configuration/SectionInfo.cs
		System.Configuration/SectionGroupInfo.cs

2004-09-21  Raja R Harinath  <rharinath@novell.com>

	* Makefile (lib_file) [PROFILE=net_2_0]: New test.  Use
	net_2_0_bootstrap libraries if necessary.