@@ -1,28 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<configuration>
-  <system.diagnostics>
-    <switches>
-      <!-- Boolean switches: any non-zero value is true -->
-      <add name="bool-true" value="1"/>
-      <add name="bool-true-2" value="4"/>
-      <add name="bool-true-3" value="-2"/>
-      <add name="bool-false" value="0"/>
-      <add name="bool-default" value="0"/>
-
-      <!-- trace switches: -->
-      <add name="trace-off" value="0"/>
-      <add name="trace-error" value="1"/>
-      <add name="trace-warning" value="2"/>
-      <add name="trace-info" value="3"/>
-      <add name="trace-verbose" value="4"/>
-
-      <add name="no-value" value="0"/>
-
-      <add name="string-value" value="0"/>
-
-      <!-- this generates a warning on .NET -->
-      <add name="trace-negative" value="-1"/>
-    </switches>
-  </system.diagnostics>
-</configuration>
-
